Definition for existing file path (#109)

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
         <dt><dfn>Digest</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Existing File Path</dfn>:</dt>
-        <dd></dd>
+        <dd>The file path as it appears on disk including the directories and the
+          filename.  For example, for file <code>d.txt</code> which is ingested in
+          version 1, the Existing File Path would be <code>v1/a/b/c/d.txt</code></dd>
         <dt><dfn>Existing State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Inventory Digest</dfn>:</dt>
