--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd>The file path as it appears on disk including the directories and the
           filename.  For example, for file <code>d.txt</code> which is ingested in
-          version 1, the Existing File Path would be <code>v1/a/b/c/d.txt</code></dd>
+          version 1, the Existing File Path would be <code>v1/a/b/c/d.txt</code>.</dd>
         <dt><dfn>Existing State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Inventory Digest</dfn>:</dt>
@@ -190,7 +190,10 @@
         <dt><dfn>Inventory File</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logical File Path</dfn>:</dt>
-        <dd></dd>
+        <dd>The file path as relative to the version directory including the
+          directories and the filename.  For example, for file <code>d.txt</code> which
+          is ingested in version 1, the Logical File Path for version 5 would be 
+          <code>a/b/c/d.txt</code>.</dd>
         <dt><dfn>Logical State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logs Directory</dfn>:</dt>
