--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@
         <dd></dd>
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd>The file path as it appears on disk including the directories and the
-          filename.  For example, for file <code>d.txt</code> which is ingested in
-          version 1, the Existing File Path would be <code>v1/a/b/c/d.txt</code></dd>
+          filename.</dd>
         <dt><dfn>Existing State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Inventory Digest</dfn>:</dt>
@@ -190,7 +189,8 @@
         <dt><dfn>Inventory File</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logical File Path</dfn>:</dt>
-        <dd></dd>
+        <dd>The file path relative to the version including the directories and the
+          filename.</dd>
         <dt><dfn>Logical State</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logs Directory</dfn>:</dt>
