Logical state definition

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@
         <dd>The file path relative to the version including the directories and the
           filename.</dd>
         <dt><dfn>Logical State</dfn>:</dt>
-        <dd></dd>
+        <dd>The logical state of the object is a grouping of logical file paths
+          reflecting the state of the content for a given version.</dd>
         <dt><dfn>Logs Directory</dfn>:</dt>
         <dd>The Logs Directory appears in the top level of the OCFL Object.  The purpose of the
           Logs Directory is to provide implementers with a place for storing local information
