--- a/index.html
+++ b/index.html
@@ -510,6 +510,21 @@ TBD
 
     <section id="example-moab-in-ocfl">
         <h2>Moab in an OCFL Object</h2>
+        <p>
+            Moab is an archive information package format developed and used by Stanford University 
+            (see: https://journal.code4lib.org/articles/8482). Many of the ideas in Moab have been refined by OLFL, 
+            and OCFL is designed to give institutions currently using Moab an easy path to adoption.
+        </p>
+        <p>
+            Converting content preserved in a Moab object in a way that does not compromise existing Moab
+            access patterns whilst allowing for the eventual use of OCFL-native workflows requires a Moab to
+            OCFL conversion tool. This uses the Moab-versioning gem to extract deltas and digests 
+            of the Moab data directory for each Moab version and translate those into version state blocks 
+            in an OCFL inventory file, which would be placed in the root directory of the Moab object. 
+            All extant files in the Moab version directories are tracked in the manifest block. The contents 
+            of the Moab manifests directory are not tracked in the version state blocks; they are effectively 
+            deleted from the OCFL object without compromising legacy access patterns.
+        </p>
     </section>
 </section>
 
