--- a/client-behaviors.html
+++ b/client-behaviors.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Client Behaviours, Oxford Common File Layout Specification</title>
+    <title>Implementation Notes, Oxford Common File Layout Specification</title>
     <meta charset="utf-8">
     <meta name="description" content="Client Behaviours, Oxford Common File Layout Specification">
     <script src="./respec-w3c-common.js"
