--- a/client-behaviors.html
+++ b/client-behaviors.html
@@ -134,7 +134,7 @@ descriptive, administrative, structural, representation and preservation metadat
 </p>
 </section><section>
 
-<h2>Filesystem metadata<h2>
+<h2>Filesystem metadata</h2>
 <p>
 Filesystem metadata (e.g. permissions, access and creation times) are not considered portable between filesystems
 or preservable through file transfer operrations. Nor can these attributes be vaidated in terms of fixity in a
