Fixed: clarify versions array requirements

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
                 key of <code>versions</code> within the inventory, and it MUST be an array.
             </p>
             <p>
-                Within the <code>versions</code> array is a list of JSON objects of type <code>Version</code>.
+                The <code>versions</code> array MUST be a list of one or more JSON objects of type <code>Version</code>.
             </p>
             <section id="version">
                 <h2>Version</h2>
