--- a/index.html
+++ b/index.html
@@ -463,13 +463,13 @@
                             </p>
                             <p>
                                 Notably, the version state can be used to provide de-duplication of content within
-                                the OCFL Object, by mapping multiple <a>logical file paths</a> to the same content digest
-                                in the manifest. Implementers may choose to use this functionality on an case-by-
-                                case basis. For example, they may choose to implement renaming (that is, changes
-                                in file <i>name</i>, but not file <i>content</i>) by pointing a new logical file path
-                                to the digest for content that was added in a previous version. Implementers may also,
-                                however, choose to accession a new file with a new name and same content as a new
-                                version.
+                                the OCFL Object, by mapping multiple <a>logical file paths</a> to the same content 
+                                digestin the manifest. Implementers may choose to use this functionality on a 
+                                case-by-case basis. For example, they may choose to implement renaming (that is, 
+                                changes in file <i>name</i>, but not file <i>content</i>) by pointing a new logical 
+                                file path to the digest for content that was added in a previous version. Implementers
+                                may also, however, choose to accession a new file with a new name and same content as 
+                                a new version.
                             </p>
                         </blockquote>
                         <p>An example state object is shown below.</p>
