Update terms; define object root and storage root

--- a/index.html
+++ b/index.html
@@ -173,20 +173,12 @@
 <section id="terminology">
     <h2>Terminology</h2>
     <dl>
-        <dt><dfn>Additions</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Deleting</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Digest</dfn>:</dt>
-        <dd></dd>
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd>The file path as it appears on disk including the directories and the
           filename.</dd>
-        <dt><dfn>Existing State</dfn>:</dt>
-        <dd></dd>
         <dt><dfn>Inventory Digest</dfn>:</dt>
         <dd></dd>
-        <dt><dfn>Inventory File</dfn>:</dt>
+        <dt><dfn>Inventory</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logical File Path</dfn>:</dt>
         <dd>The file path relative to the version including the directories and the
@@ -202,13 +194,9 @@
         <dt><dfn>OCFL Object</dfn>:</dt>
         <dd></dd>
         <dt><dfn>OCFL Object Root</dfn>:<dt>
-        <dd></dd>
+        <dd>The root of an <a>OCFL Object</a>.</dd>
         <dt><dfn>OCFL Storage Root</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Purging</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Renaming</dfn>:</dt>
-        <dd></dd>
+        <dd>The base directory of an OCFL storage layout.</dd>
         <dt><dfn>Version</dfn>:<dt>
         <dd></dd>
     </dl>
