Updates from recommendations in PR #124

--- a/index.html
+++ b/index.html
@@ -194,7 +194,9 @@
         <dt><dfn>OCFL Object</dfn>:</dt>
         <dd></dd>
         <dt><dfn>OCFL Object Root</dfn>:<dt>
-        <dd>The root of an <a>OCFL Object</a>.</dd>
+        <dd>The base directory of an <a>OCFL Object</a> that may exist either as a
+          first class directory, or in the case of a zipped OCFL Object, as the top
+          directory in a zip file.</dd>
         <dt><dfn>OCFL Storage Root</dfn>:</dt>
         <dd>The base directory of an OCFL storage layout.</dd>
         <dt><dfn>Version</dfn>:<dt>
