--- a/index.html
+++ b/index.html
@@ -185,20 +185,12 @@
 <section id="terminology">
     <h2>Terminology</h2>
     <dl>
-        <dt><dfn>Additions</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Deleting</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Digest</dfn>:</dt>
-        <dd></dd>
         <dt><dfn>Existing File Path</dfn>:</dt>
         <dd>The file path as it appears on disk including the directories and the
           filename.</dd>
-        <dt><dfn>Existing State</dfn>:</dt>
-        <dd></dd>
         <dt><dfn>Inventory Digest</dfn>:</dt>
         <dd></dd>
-        <dt><dfn>Inventory File</dfn>:</dt>
+        <dt><dfn>Inventory</dfn>:</dt>
         <dd></dd>
         <dt><dfn>Logical File Path</dfn>:</dt>
         <dd>The file path relative to the version including the directories and the
@@ -214,13 +206,11 @@
         <dt><dfn>OCFL Object</dfn>:</dt>
         <dd></dd>
         <dt><dfn>OCFL Object Root</dfn>:<dt>
-        <dd></dd>
+        <dd>The base directory of an <a>OCFL Object</a> that may exist either as a
+          first class directory, or in the case of a zipped OCFL Object, as the top
+          directory in a zip file.</dd>
         <dt><dfn>OCFL Storage Root</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Purging</dfn>:</dt>
-        <dd></dd>
-        <dt><dfn>Renaming</dfn>:</dt>
-        <dd></dd>
+        <dd>The base directory of an OCFL storage layout.</dd>
         <dt><dfn>Version</dfn>:<dt>
         <dd></dd>
     </dl>
