Reorder to put drafts under /draft/, add stub top-pevel page

--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -4,7 +4,7 @@
     <title>Oxford Common File Layout Specification</title>
     <meta charset="utf-8">
     <meta name="description" content="Oxford Common File Layout Specification">
-    <script src="./respec-w3c-common.js"
+    <script src="../../respec-w3c-common.js"
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
