--- a/draft/implemenation-notes/index.html
+++ b/draft/implemenation-notes/index.html
@@ -4,7 +4,7 @@
     <title>Implementation Notes, Oxford Common File Layout Specification</title>
     <meta charset="utf-8">
     <meta name="description" content="Client Behaviours, Oxford Common File Layout Specification">
-    <script src="./respec-w3c-common.js"
+    <script src="../../respec-w3c-common.js"
             async class="remove"></script>
     <script class="remove">
         var respecConfig = {
