--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -214,7 +214,7 @@
         <dt><dfn>OCFL Storage Root</dfn>:</dt>
         <dd>The base directory of an OCFL storage layout.</dd>
         <dt><dfn>Version</dfn>:<dt>
-        <dd></dd>
+        <dd>An incremental change to the preserved content of an <a>OCFL Object</a>.</dd>
     </dl>
 </section>
 
