--- a/draft/spec/index.html
+++ b/draft/spec/index.html
@@ -111,6 +111,11 @@
                    ],
                    date: "7 June 2018"
                 },
+                "OAIS": {
+                    title: " Reference Model for an Open Archival Information System (OAIS), Issue 2",
+                    href: "https://public.ccsds.org/pubs/650x0m2.pdf",
+                    date: "June 2012"
+                },
                 "Stop-Using-SHA-256": {
                   title: "Stop Using SHA-256",
                   href: "https://medium.com/@davidtstrauss/stop-using-sha-256-6adbb55c608",
@@ -248,9 +253,9 @@
     <p>
         A key goal of OCFL is the rebuildability of a repository from an OCFL storage root without additional
         information resources. Consequently, a key implementation consideration should be to ensure that OCFL Objects
-        contain all the data and metadata required to achieve this. With reference to th OAIS model, this would include
-        all the descriptive, administrative, structural, representation and preservation metadata relevant to the
-        object.
+        contain all the data and metadata required to achieve this. With reference to the [[OAIS]] model, this would
+        include all the descriptive, administrative, structural, representation and preservation metadata relevant
+        to the object.
     </p>
 
     <section id="basic-structure">
